--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,4 @@
-'use client'
-import { createGlobalStyle } from 'styled-components';
-
-
-
-const GlobalStyles = createGlobalStyle`
-  :root {
+:root {
     /* dark theme color default */
     --bg: #3b3b3b;
     --bgBox: #404040;
@@ -17,35 +11,33 @@ const GlobalStyles = createGlobalStyle`
     --colorTextNotHighlighted: #B4ADC7;
 
     --border-radius: 8px;
-    
-  //  breakpoints
+
+    /*breakpoints*/
     --breakpoint-sm: "640px";
     --breakpoint-md: "768px";
     --breakpoint-lg: "1024px";
     --breakpoint-xl: "1280px";
     --breackpoint-2xl: "1536px";
-  }
+}
 
-  
-  * {
+
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
+}
 
-  html,
-  body {
+html,
+body {
     max-width: 100vw;
     overflow-x: hidden;
-  }
+}
 
-  body {
+body {
     background-color: var(--bg);
-  }
+}
 
-  a {
+a {
     color: inherit;
     text-decoration: none;
-  }
-`;
-export default GlobalStyles;
+}
